# Nur

./: .env.example  .gitignore  .pre-commit-config.yaml  .project  .sandbox.env  Dockerfile  README.md  check_chroma_page_id.py  clear_content.py  compose.yml  cond_list.txt  configuration.py  consumer.py  credentials.py  credentials_example copy.py  credentials_example.py  docker-compose.yml  environment.yml  file_system_and_Schema.txt  fs.txt  full_test_import.py  main.py  page_titles_doc_generator.py  proximity_search.py  pull_all_global_spaces.py  pyproject.toml  requirements.txt  secrets.yaml  test_confluence.py  test_pulsar.py  values.yaml
app/: .gitignore  (+5 more)
nurai/: .pre-commit-config.yaml  NurAI initial setup.md  README.MD  alembic.ini  configuration.py  docker-compose.yml  pyproject.toml  requirements.txt
nurai/documentation/: logging.md  slack_message_examples.md
nurai/nurai/: alembic.ini  main.py
nurai/nurai/assistants/controllers/: assistant_create_controller.py
nurai/nurai/assistants/models/: assistant.py
nurai/nurai/assistants/requests/: assistant_create_request.py
nurai/nurai/assistants/routing/: assistants_router.py
nurai/nurai/chat_services/: chat_service_factory.py  chat_service_interface.py
nurai/nurai/chat_services/routing/: chat_service_router.py
nurai/nurai/chat_services/slack/: slack_client.py  slack_service.py
nurai/nurai/database/: chroma.py  database.py
nurai/nurai/logger/: logger.py
nurai/nurai/migrations/: env.py
nurai/nurai/openai/: client.py
nurai/nurai/settings/: settings.py
nurai/nurai/storage/: storage_manager.py
(+192 files in other folders)
