[tool.poetry]
name = "nur"
version = "0.2.0"
description = "self healing documentation"
authors = ["Roland Abou Younes <roland@abouyounes.com>"]
license = "Apache"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
persist-queue = "^0.8.1"
openai = "^1.12.0"
langchain = "^0.1.7"
chromadb = "^0.4.22"
fastapi = "^0.109.2"
atlassian-python-api = "^3.41.10"
backoff = "^2.2.1"
beautifulsoup4 = "^4.12.3"
bzip3 = "^0.1.4"
filelock = "^3.13.1"
SQLite4 = "^0.1.1"
uvicorn = "^0.27.1"
slack-sdk = "^3.27.0"
langchain-community = "^0.0.20"
scikit-learn = "^1.4.1.post1"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
plotly = "^5.20.0"
umap-learn = "^0.5.5"
pymysql = "^1.1.0"
pydantic-settings = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
